--- a/函数是什么啊喵.md
+++ b/函数是什么啊喵.md
@@ -8,9 +8,10 @@
 好吧，既然没有疑问就创造疑问，你没有疑问也得有疑问，你作为一个学生你没有求知欲还得了？
 
 所以，我们可以通过~~人工智能，语义分析，网络爬虫，非对称加密~~搜索引擎得知函数就是：
-    - ![如果…如果你看不到这张图片的话…请…耐心等待一下♥️](https://ghproxy.com/https://raw.githubusercontent.com/jwy2008/jwy2008/main/1.png)
-    - ![欧尼酱不可以太着急哦♥️](https://ghproxy.com/https://raw.githubusercontent.com/jwy2008/jwy2008/main/2.png)
-    - ![喵？没刷新出来啊](https://ghproxy.com/https://raw.githubusercontent.com/jwy2008/jwy2008/main/3.png)
+    ![如果…如果你看不到这张图片的话…请…耐心等待一下♥️](https://ghproxy.com/https://raw.githubusercontent.com/jwy2008/jwy2008/main/1.png)
+    ![欧尼酱不可以太着急哦♥️](https://ghproxy.com/https://raw.githubusercontent.com/jwy2008/jwy2008/main/2.png)
+    ![喵？没刷新出来啊](https://ghproxy.com/https://raw.githubusercontent.com/jwy2008/jwy2008/main/3.png)    
+
 然后你根本看不懂~~看得懂的别来砸场子~~然后捏…就要吧那个很经典的比喻搬出来惹…才怪！我才不这么做呢！哼！(⁠￣⁠ヘ⁠￣⁠;⁠)
 
 我们只需要知道，编程本身就是数据和过程，而编程中的函数，就是一个过程，你给它一个传参，它内部进行运算，然后给你返回一个值的一个过程，因此，我们可以写出一个很简单的伪代码：
