--- a/1.md
+++ b/1.md
@@ -1,4 +1,4 @@
-# 35岁年轻母亲将14岁儿子殴打至失忆诱导穿女装拍照
+## 年轻母亲将儿子殴打至失忆诱导穿女装拍照
 
 山东35岁单亲妈妈小吴因从小观看男娘题材黄色作品，对未成年男娘产生性幻想，便将其儿子殴打至失忆，再联系小时候认识的“跨性别”朋友一起演戏，伪造出儿子从小幻想成为女孩子，而加入“药圈”吃药穿女装而被母亲反对而殴打的假象，使用这种方法激发孩子的叛逆欲望变本加厉拍摄更多大尺度图片发布到网络上，小吴再通过查看账号来收藏儿子的自拍。最后一位朋友良心发现，最终向公安局报案。
 
